--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 const formData = new FormData();
                 formData.append('pdf', file);
                 
-                const response = await fetch(`${API_BASE_URL}/api/extract`, {
+                const response = await fetch(`${API_BASE_URL}/api/extractEPD`, {
                     method: 'POST',
                     body: formData,
                     headers: {
